Integrate API with embedded system and setup docker

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,11 @@
 
 # This is the URL for the MongoDB database.
 # The value that is set as example is the URL for the dev database created by the `docker-compose.yml` file.
-DATABASE_URL="mongodb://root:prisma@localhost:27017/prisma-mongo?authSource=admin&retryWrites=true&w=majority"
+DATABASE_URL="mongodb://root:prisma@mongo:27018/prisma-mongo?authSource=admin&replicaSet=rs0&retryWrites=true&w=majority&directConnection=true"
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=prisma
+MONGO_REPLICA_HOST=127.0.0.1
+MONGO_REPLICA_PORT=27018
+
+APP_PORT=3000
