--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 version: '3.8'
 
-# For connection urls to the following instances, see
-# https://github.com/prisma/prisma/blob/main/TESTING.md#environment-variables
 services:
-  # Replica Set (required for Prisma Client)
   mongo:
     container_name: mongo
     build:
@@ -14,16 +11,23 @@ services:
       MONGO_REPLICA_HOST: 127.0.0.1
       MONGO_REPLICA_PORT: 27018
     env_file:
-      - .env
+      - .env.staging
     ports:
       - '27018:27018'
-  web:
+
+  redis:
+    container_name: cache
+    image: redis
+    ports:
+      - 6379:6379
+
+  api:
     build:
-      dockerfile: ./docker/app.Dockerfile
+      dockerfile: ./docker/api.Dockerfile
     environment:
       DATABASE_URL: mongodb://root:prisma@mongo:27018/prisma-mongo?authSource=admin&replicaSet=rs0&retryWrites=true&w=majority&directConnection=true
     env_file:
-      - .env
+      - .env.staging
     ports:
       - '3000:3000'
     depends_on:
