Add infrastructure and application layers

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_translate: ^4.0.4
+  http: ^1.1.0
+  lottie: ^2.7.0
+  dartz: ^0.10.1
+  intl: ^0.18.1
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
